Fixes .linked buttons on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -294,6 +294,7 @@ button#download {
 .linked {
     margin: 24px;
     white-space: nowrap;
+    font-size: 0; /* Hide whitespace chars between buttons */
 }
 
 .linked button,
@@ -302,7 +303,6 @@ button#download {
     border-radius: 0;
     margin: 0;
     padding: 16px;
-    float: left;
 }
 
 .linked button:first-child,
